apps/flux/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lan-only
  namespace: flux-system
spec:
  ipAllowList:
    sourceRange:
      - 10.22.0.0/16
      - 127.0.0.1/32
